<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="99dp"
        android:layout_height="106dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/logo_epsi"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="150dp"
        tools:layout_conversion_absoluteWidth="140dp" />

    <TextView
        android:id="@+id/lbl_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/titreMainActivity"
        android:paddingLeft="10dp"
        android:textColorHint="#000000"
        app:layout_constraintHorizontal_bias="0.5"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23"
        tools:layout_conversion_absoluteHeight="40dp" />

    <TextView
        android:id="@+id/lbl_nom"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/namePlaceHolder"
        android:paddingLeft="10dp"
        android:textColorHint="#000000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382"
        tools:layout_conversion_absoluteHeight="40dp"
        tools:layout_conversion_absoluteWidth="71dp" />

    <EditText
        android:id="@+id/txt_nom"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/border"
        android:paddingLeft="10dp"
        android:textColorHint="#000000"
        android:textSize="18dp"
        android:inputType="textCapCharacters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.712"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382"
        tools:layout_conversion_absoluteHeight="40dp"
        tools:layout_conversion_absoluteWidth="124dp" />

    <TextView
        android:id="@+id/lbl_prenom"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/firstNamePlaceHolder"
        android:paddingLeft="10dp"
        android:textColorHint="#000000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467"
        tools:layout_conversion_absoluteHeight="40dp"
        tools:layout_conversion_absoluteWidth="90dp" />

    <EditText
        android:id="@+id/txt_prenom"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/border"
        android:inputType="textCapWords"
        android:paddingLeft="10dp"
        android:textColorHint="#000000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.712"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467"
        tools:layout_conversion_absoluteHeight="40dp"
        tools:layout_conversion_absoluteWidth="150dp" />

    <TextView
        android:id="@+id/lbl_poids"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/poidsTextView"
        android:paddingLeft="10dp"
        android:textColorHint="#000000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678"
        tools:layout_conversion_absoluteHeight="40dp"
        tools:layout_conversion_absoluteWidth="90dp" />

    <TextView
        android:id="@+id/lbl_taille"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/tailleTextView"
        android:paddingLeft="10dp"
        android:textColorHint="#000000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.332"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603"
        tools:layout_conversion_absoluteHeight="40dp"
        tools:layout_conversion_absoluteWidth="90dp" />

    <Spinner
        android:id="@+id/lst_taille"
        android:layout_width="110dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603" />

    <Spinner
        android:id="@+id/lst_poids"
        android:layout_width="110dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678" />

    <Button
        android:id="@+id/btn_valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0f52ba"
        android:text="@string/validButtonText"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="97dp" />

    <Button
        android:id="@+id/btn_historique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0f52ba"
        android:padding="15dp"
        android:text="@string/strHistorique"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="97dp" />


</androidx.constraintlayout.widget.ConstraintLayout>